fix z-index

--- a/home/.atom/styles.less
+++ b/home/.atom/styles.less
@@ -60,7 +60,7 @@ atom-text-editor {
   &.vim-mode {
     &:before {
       padding: 0 5px;
-      z-index: 1000000000;
+      z-index: 1;
       position: absolute;
       top: 0;
       right: 0;
